src/app/styles/index.scss
@use "reset";
@use "fonts";
@use "typography";
@use "spacing";
@use "colors";
@use "box-shadow";
@use "z-indexes";
@use "components";
@import "./breakpoints";

html,
body,
#root {
  height: 100%;
  font-family: Montserrat, sans-serif;
}

body {
  width: 100%;
  background-color: var(--color-primary);
  color: var(--color-text-primary);
  font-size: var(--fs-300);
}

html {
  scroll-behavior: smooth;
}

.app {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;

  &-content {
    height: 100%;
    overflow-y: auto;
  }

  &-main {
    width: 100%;
    max-width: var(--app-content-width);
    margin: 0 auto;
  }
}

